lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instruction
Rule 1     instruction -> program
Rule 2     instruction -> list_instruction_assignment
Rule 3     list_instruction -> list_instruction instruction
Rule 4     program -> LEFTCURLYBRACKET list_instruction RIGHTCURLYBRACKET
Rule 5     instruction -> instruction_print
Rule 6     instruction -> instruction_assignment
Rule 7     program -> LEFTCURLYBRACKET RIGHTCURLYBRACKET
Rule 8     list_instruction -> instruction
Rule 9     instruction -> if_instruction
Rule 10    if_instruction -> IF LEFTPARANTHESIS definition RIGHTPARANTHESIS program
Rule 11    instruction -> while_instruction
Rule 12    while_instruction -> WHILE LEFTPARANTHESIS definition RIGHTPARANTHESIS program
Rule 13    instruction -> else_instruction
Rule 14    else_instruction -> if_instruction ELSE program
Rule 15    instruction_assignment -> NAME ASSIGNMENT definition SEMICOLON
Rule 16    list_instruction_assignment -> index ASSIGNMENT definition SEMICOLON
Rule 17    instruction_print -> PRINTSTATEMENT LEFTPARANTHESIS definition RIGHTPARANTHESIS SEMICOLON
Rule 18    list -> LEFTSQAUREBRACKET inner_list RIGHTSQAUREBRACKET
Rule 19    definition -> list
Rule 20    tuple -> LEFTPARANTHESIS inner_tuple RIGHTPARANTHESIS
Rule 21    inner_list -> inner_list COMMA definition
Rule 22    inner_tuple -> definition COMMA definition
Rule 23    inner_list -> definition
Rule 24    inner_tuple -> inner_tuple COMMA definition
Rule 25    definition -> definition PRODUCT definition
Rule 26    definition -> definition DIFFERENCE definition
Rule 27    definition -> definition SUMMATION definition
Rule 28    definition -> definition INTDIV definition
Rule 29    definition -> definition DIVIDE definition
Rule 30    definition -> definition POWER definition
Rule 31    definition -> definition MODULUS definition
Rule 32    definition -> definition CONCAT definition
Rule 33    definition -> definition IN definition
Rule 34    definition -> tuple
Rule 35    definition -> definition LESSERTHAN definition
Rule 36    definition -> definition GREATERTHAN definition
Rule 37    definition -> definition LESSEREQUAL definition
Rule 38    definition -> definition GREATEREQUAL definition
Rule 39    definition -> STRING
Rule 40    definition -> definition NOTEQUAL definition
Rule 41    definition -> definition EQUAL definition
Rule 42    definition -> definition ANDALSO definition
Rule 43    pound -> TUPLEPOUND definition definition
Rule 44    definition -> NUMBER
Rule 45    definition -> definition ORELSE definition
Rule 46    definition -> DIFFERENCE definition
Rule 47    index -> definition LEFTSQAUREBRACKET definition RIGHTSQAUREBRACKET
Rule 48    definition -> SUMMATION definition
Rule 49    definition -> LEFTPARANTHESIS definition RIGHTPARANTHESIS
Rule 50    definition -> TRUE
Rule 51    phase -> part
Rule 52    definition -> phase
Rule 53    part -> <empty>
Rule 54    definition -> FALSE
Rule 55    definition -> index
Rule 56    definition -> NEGATION definition
Rule 57    definition -> pound
Rule 58    definition -> NAME

Terminals, with rules where they appear

ANDALSO              : 42
ASSIGNMENT           : 15 16
COMMA                : 21 22 24
CONCAT               : 32
DIFFERENCE           : 26 46
DIVIDE               : 29
ELSE                 : 14
EQUAL                : 41
FALSE                : 54
GREATEREQUAL         : 38
GREATERTHAN          : 36
IF                   : 10
IN                   : 33
INTDIV               : 28
LEFTCURLYBRACKET     : 4 7
LEFTPARANTHESIS      : 10 12 17 20 49
LEFTSQAUREBRACKET    : 18 47
LESSEREQUAL          : 37
LESSERTHAN           : 35
MODULUS              : 31
NAME                 : 15 58
NEGATION             : 56
NOTEQUAL             : 40
NUMBER               : 44
ORELSE               : 45
POWER                : 30
PRINTSTATEMENT       : 17
PRODUCT              : 25
RIGHTCURLYBRACKET    : 4 7
RIGHTPARANTHESIS     : 10 12 17 20 49
RIGHTSQAUREBRACKET   : 18 47
SEMICOLON            : 15 16 17
STRING               : 39
SUMMATION            : 27 48
TRUE                 : 50
TUPLEPOUND           : 43
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

definition           : 10 12 15 16 17 21 22 22 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 35 35 36 36 37 37 38 38 40 40 41 41 42 42 43 43 45 45 46 47 47 48 49 56
else_instruction     : 13
if_instruction       : 9 14
index                : 16 55
inner_list           : 18 21
inner_tuple          : 20 24
instruction          : 3 8 0
instruction_assignment : 6
instruction_print    : 5
list                 : 19
list_instruction     : 3 4
list_instruction_assignment : 2
part                 : 51
phase                : 52
pound                : 57
program              : 1 10 12 14
tuple                : 34
while_instruction    : 11

Parsing method: LALR

state 0

    (0) S' -> . instruction
    (1) instruction -> . program
    (2) instruction -> . list_instruction_assignment
    (5) instruction -> . instruction_print
    (6) instruction -> . instruction_assignment
    (9) instruction -> . if_instruction
    (11) instruction -> . while_instruction
    (13) instruction -> . else_instruction
    (4) program -> . LEFTCURLYBRACKET list_instruction RIGHTCURLYBRACKET
    (7) program -> . LEFTCURLYBRACKET RIGHTCURLYBRACKET
    (16) list_instruction_assignment -> . index ASSIGNMENT definition SEMICOLON
    (17) instruction_print -> . PRINTSTATEMENT LEFTPARANTHESIS definition RIGHTPARANTHESIS SEMICOLON
    (15) instruction_assignment -> . NAME ASSIGNMENT definition SEMICOLON
    (10) if_instruction -> . IF LEFTPARANTHESIS definition RIGHTPARANTHESIS program
    (12) while_instruction -> . WHILE LEFTPARANTHESIS definition RIGHTPARANTHESIS program
    (14) else_instruction -> . if_instruction ELSE program
    (47) index -> . definition LEFTSQAUREBRACKET definition RIGHTSQAUREBRACKET
    (19) definition -> . list
    (25) definition -> . definition PRODUCT definition
    (26) definition -> . definition DIFFERENCE definition
    (27) definition -> . definition SUMMATION definition
    (28) definition -> . definition INTDIV definition
    (29) definition -> . definition DIVIDE definition
    (30) definition -> . definition POWER definition
    (31) definition -> . definition MODULUS definition
    (32) definition -> . definition CONCAT definition
    (33) definition -> . definition IN definition
    (34) definition -> . tuple
    (35) definition -> . definition LESSERTHAN definition
    (36) definition -> . definition GREATERTHAN definition
    (37) definition -> . definition LESSEREQUAL definition
    (38) definition -> . definition GREATEREQUAL definition
    (39) definition -> . STRING
    (40) definition -> . definition NOTEQUAL definition
    (41) definition -> . definition EQUAL definition
    (42) definition -> . definition ANDALSO definition
    (44) definition -> . NUMBER
    (45) definition -> . definition ORELSE definition
    (46) definition -> . DIFFERENCE definition
    (48) definition -> . SUMMATION definition
    (49) definition -> . LEFTPARANTHESIS definition RIGHTPARANTHESIS
    (50) definition -> . TRUE
    (52) definition -> . phase
    (54) definition -> . FALSE
    (55) definition -> . index
    (56) definition -> . NEGATION definition
    (57) definition -> . pound
    (58) definition -> . NAME
    (18) list -> . LEFTSQAUREBRACKET inner_list RIGHTSQAUREBRACKET
    (20) tuple -> . LEFTPARANTHESIS inner_tuple RIGHTPARANTHESIS
    (51) phase -> . part
    (43) pound -> . TUPLEPOUND definition definition
    (53) part -> .

  ! shift/reduce conflict for LEFTSQAUREBRACKET resolved as shift
  ! shift/reduce conflict for DIFFERENCE resolved as shift
  ! shift/reduce conflict for SUMMATION resolved as shift
    LEFTCURLYBRACKET shift and go to state 9
    PRINTSTATEMENT  shift and go to state 12
    NAME            shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    STRING          shift and go to state 22
    NUMBER          shift and go to state 23
    DIFFERENCE      shift and go to state 19
    SUMMATION       shift and go to state 20
    LEFTPARANTHESIS shift and go to state 13
    TRUE            shift and go to state 24
    FALSE           shift and go to state 26
    NEGATION        shift and go to state 27
    LEFTSQAUREBRACKET shift and go to state 17
    TUPLEPOUND      shift and go to state 30
    PRODUCT         reduce using rule 53 (part -> .)
    INTDIV          reduce using rule 53 (part -> .)
    DIVIDE          reduce using rule 53 (part -> .)
    POWER           reduce using rule 53 (part -> .)
    MODULUS         reduce using rule 53 (part -> .)
    CONCAT          reduce using rule 53 (part -> .)
    IN              reduce using rule 53 (part -> .)
    LESSERTHAN      reduce using rule 53 (part -> .)
    GREATERTHAN     reduce using rule 53 (part -> .)
    LESSEREQUAL     reduce using rule 53 (part -> .)
    GREATEREQUAL    reduce using rule 53 (part -> .)
    NOTEQUAL        reduce using rule 53 (part -> .)
    EQUAL           reduce using rule 53 (part -> .)
    ANDALSO         reduce using rule 53 (part -> .)
    ORELSE          reduce using rule 53 (part -> .)

  ! LEFTSQAUREBRACKET [ reduce using rule 53 (part -> .) ]
  ! DIFFERENCE      [ reduce using rule 53 (part -> .) ]
  ! SUMMATION       [ reduce using rule 53 (part -> .) ]

    instruction                    shift and go to state 1
    program                        shift and go to state 2
    list_instruction_assignment    shift and go to state 3
    instruction_print              shift and go to state 4
    instruction_assignment         shift and go to state 5
    if_instruction                 shift and go to state 6
    while_instruction              shift and go to state 7
    else_instruction               shift and go to state 8
    index                          shift and go to state 10
    definition                     shift and go to state 11
    list                           shift and go to state 18
    tuple                          shift and go to state 21
    phase                          shift and go to state 25
    pound                          shift and go to state 28
    part                           shift and go to state 29

state 1

    (0) S' -> instruction .



state 2

    (1) instruction -> program .

    $end            reduce using rule 1 (instruction -> program .)
    RIGHTCURLYBRACKET reduce using rule 1 (instruction -> program .)
    LEFTCURLYBRACKET reduce using rule 1 (instruction -> program .)
    PRINTSTATEMENT  reduce using rule 1 (instruction -> program .)
    NAME            reduce using rule 1 (instruction -> program .)
    IF              reduce using rule 1 (instruction -> program .)
    WHILE           reduce using rule 1 (instruction -> program .)
    STRING          reduce using rule 1 (instruction -> program .)
    NUMBER          reduce using rule 1 (instruction -> program .)
    DIFFERENCE      reduce using rule 1 (instruction -> program .)
    SUMMATION       reduce using rule 1 (instruction -> program .)
    LEFTPARANTHESIS reduce using rule 1 (instruction -> program .)
    TRUE            reduce using rule 1 (instruction -> program .)
    FALSE           reduce using rule 1 (instruction -> program .)
    NEGATION        reduce using rule 1 (instruction -> program .)
    LEFTSQAUREBRACKET reduce using rule 1 (instruction -> program .)
    TUPLEPOUND      reduce using rule 1 (instruction -> program .)
    PRODUCT         reduce using rule 1 (instruction -> program .)
    INTDIV          reduce using rule 1 (instruction -> program .)
    DIVIDE          reduce using rule 1 (instruction -> program .)
    POWER           reduce using rule 1 (instruction -> program .)
    MODULUS         reduce using rule 1 (instruction -> program .)
    CONCAT          reduce using rule 1 (instruction -> program .)
    IN              reduce using rule 1 (instruction -> program .)
    LESSERTHAN      reduce using rule 1 (instruction -> program .)
    GREATERTHAN     reduce using rule 1 (instruction -> program .)
    LESSEREQUAL     reduce using rule 1 (instruction -> program .)
    GREATEREQUAL    reduce using rule 1 (instruction -> program .)
    NOTEQUAL        reduce using rule 1 (instruction -> program .)
    EQUAL           reduce using rule 1 (instruction -> program .)
    ANDALSO         reduce using rule 1 (instruction -> program .)
    ORELSE          reduce using rule 1 (instruction -> program .)


state 3

    (2) instruction -> list_instruction_assignment .

    $end            reduce using rule 2 (instruction -> list_instruction_assignment .)
    RIGHTCURLYBRACKET reduce using rule 2 (instruction -> list_instruction_assignment .)
    LEFTCURLYBRACKET reduce using rule 2 (instruction -> list_instruction_assignment .)
    PRINTSTATEMENT  reduce using rule 2 (instruction -> list_instruction_assignment .)
    NAME            reduce using rule 2 (instruction -> list_instruction_assignment .)
    IF              reduce using rule 2 (instruction -> list_instruction_assignment .)
    WHILE           reduce using rule 2 (instruction -> list_instruction_assignment .)
    STRING          reduce using rule 2 (instruction -> list_instruction_assignment .)
    NUMBER          reduce using rule 2 (instruction -> list_instruction_assignment .)
    DIFFERENCE      reduce using rule 2 (instruction -> list_instruction_assignment .)
    SUMMATION       reduce using rule 2 (instruction -> list_instruction_assignment .)
    LEFTPARANTHESIS reduce using rule 2 (instruction -> list_instruction_assignment .)
    TRUE            reduce using rule 2 (instruction -> list_instruction_assignment .)
    FALSE           reduce using rule 2 (instruction -> list_instruction_assignment .)
    NEGATION        reduce using rule 2 (instruction -> list_instruction_assignment .)
    LEFTSQAUREBRACKET reduce using rule 2 (instruction -> list_instruction_assignment .)
    TUPLEPOUND      reduce using rule 2 (instruction -> list_instruction_assignment .)
    PRODUCT         reduce using rule 2 (instruction -> list_instruction_assignment .)
    INTDIV          reduce using rule 2 (instruction -> list_instruction_assignment .)
    DIVIDE          reduce using rule 2 (instruction -> list_instruction_assignment .)
    POWER           reduce using rule 2 (instruction -> list_instruction_assignment .)
    MODULUS         reduce using rule 2 (instruction -> list_instruction_assignment .)
    CONCAT          reduce using rule 2 (instruction -> list_instruction_assignment .)
    IN              reduce using rule 2 (instruction -> list_instruction_assignment .)
    LESSERTHAN      reduce using rule 2 (instruction -> list_instruction_assignment .)
    GREATERTHAN     reduce using rule 2 (instruction -> list_instruction_assignment .)
    LESSEREQUAL     reduce using rule 2 (instruction -> list_instruction_assignment .)
    GREATEREQUAL    reduce using rule 2 (instruction -> list_instruction_assignment .)
    NOTEQUAL        reduce using rule 2 (instruction -> list_instruction_assignment .)
    EQUAL           reduce using rule 2 (instruction -> list_instruction_assignment .)
    ANDALSO         reduce using rule 2 (instruction -> list_instruction_assignment .)
    ORELSE          reduce using rule 2 (instruction -> list_instruction_assignment .)


state 4

    (5) instruction -> instruction_print .

    $end            reduce using rule 5 (instruction -> instruction_print .)
    RIGHTCURLYBRACKET reduce using rule 5 (instruction -> instruction_print .)
    LEFTCURLYBRACKET reduce using rule 5 (instruction -> instruction_print .)
    PRINTSTATEMENT  reduce using rule 5 (instruction -> instruction_print .)
    NAME            reduce using rule 5 (instruction -> instruction_print .)
    IF              reduce using rule 5 (instruction -> instruction_print .)
    WHILE           reduce using rule 5 (instruction -> instruction_print .)
    STRING          reduce using rule 5 (instruction -> instruction_print .)
    NUMBER          reduce using rule 5 (instruction -> instruction_print .)
    DIFFERENCE      reduce using rule 5 (instruction -> instruction_print .)
    SUMMATION       reduce using rule 5 (instruction -> instruction_print .)
    LEFTPARANTHESIS reduce using rule 5 (instruction -> instruction_print .)
    TRUE            reduce using rule 5 (instruction -> instruction_print .)
    FALSE           reduce using rule 5 (instruction -> instruction_print .)
    NEGATION        reduce using rule 5 (instruction -> instruction_print .)
    LEFTSQAUREBRACKET reduce using rule 5 (instruction -> instruction_print .)
    TUPLEPOUND      reduce using rule 5 (instruction -> instruction_print .)
    PRODUCT         reduce using rule 5 (instruction -> instruction_print .)
    INTDIV          reduce using rule 5 (instruction -> instruction_print .)
    DIVIDE          reduce using rule 5 (instruction -> instruction_print .)
    POWER           reduce using rule 5 (instruction -> instruction_print .)
    MODULUS         reduce using rule 5 (instruction -> instruction_print .)
    CONCAT          reduce using rule 5 (instruction -> instruction_print .)
    IN              reduce using rule 5 (instruction -> instruction_print .)
    LESSERTHAN      reduce using rule 5 (instruction -> instruction_print .)
    GREATERTHAN     reduce using rule 5 (instruction -> instruction_print .)
    LESSEREQUAL     reduce using rule 5 (instruction -> instruction_print .)
    GREATEREQUAL    reduce using rule 5 (instruction -> instruction_print .)
    NOTEQUAL        reduce using rule 5 (instruction -> instruction_print .)
    EQUAL           reduce using rule 5 (instruction -> instruction_print .)
    ANDALSO         reduce using rule 5 (instruction -> instruction_print .)
    ORELSE          reduce using rule 5 (instruction -> instruction_print .)


state 5

    (6) instruction -> instruction_assignment .

    $end            reduce using rule 6 (instruction -> instruction_assignment .)
    RIGHTCURLYBRACKET reduce using rule 6 (instruction -> instruction_assignment .)
    LEFTCURLYBRACKET reduce using rule 6 (instruction -> instruction_assignment .)
    PRINTSTATEMENT  reduce using rule 6 (instruction -> instruction_assignment .)
    NAME            reduce using rule 6 (instruction -> instruction_assignment .)
    IF              reduce using rule 6 (instruction -> instruction_assignment .)
    WHILE           reduce using rule 6 (instruction -> instruction_assignment .)
    STRING          reduce using rule 6 (instruction -> instruction_assignment .)
    NUMBER          reduce using rule 6 (instruction -> instruction_assignment .)
    DIFFERENCE      reduce using rule 6 (instruction -> instruction_assignment .)
    SUMMATION       reduce using rule 6 (instruction -> instruction_assignment .)
    LEFTPARANTHESIS reduce using rule 6 (instruction -> instruction_assignment .)
    TRUE            reduce using rule 6 (instruction -> instruction_assignment .)
    FALSE           reduce using rule 6 (instruction -> instruction_assignment .)
    NEGATION        reduce using rule 6 (instruction -> instruction_assignment .)
    LEFTSQAUREBRACKET reduce using rule 6 (instruction -> instruction_assignment .)
    TUPLEPOUND      reduce using rule 6 (instruction -> instruction_assignment .)
    PRODUCT         reduce using rule 6 (instruction -> instruction_assignment .)
    INTDIV          reduce using rule 6 (instruction -> instruction_assignment .)
    DIVIDE          reduce using rule 6 (instruction -> instruction_assignment .)
    POWER           reduce using rule 6 (instruction -> instruction_assignment .)
    MODULUS         reduce using rule 6 (instruction -> instruction_assignment .)
    CONCAT          reduce using rule 6 (instruction -> instruction_assignment .)
    IN              reduce using rule 6 (instruction -> instruction_assignment .)
    LESSERTHAN      reduce using rule 6 (instruction -> instruction_assignment .)
    GREATERTHAN     reduce using rule 6 (instruction -> instruction_assignment .)
    LESSEREQUAL     reduce using rule 6 (instruction -> instruction_assignment .)
    GREATEREQUAL    reduce using rule 6 (instruction -> instruction_assignment .)
    NOTEQUAL        reduce using rule 6 (instruction -> instruction_assignment .)
    EQUAL           reduce using rule 6 (instruction -> instruction_assignment .)
    ANDALSO         reduce using rule 6 (instruction -> instruction_assignment .)
    ORELSE          reduce using rule 6 (instruction -> instruction_assignment .)


state 6

    (9) instruction -> if_instruction .
    (14) else_instruction -> if_instruction . ELSE program

    $end            reduce using rule 9 (instruction -> if_instruction .)
    RIGHTCURLYBRACKET reduce using rule 9 (instruction -> if_instruction .)
    LEFTCURLYBRACKET reduce using rule 9 (instruction -> if_instruction .)
    PRINTSTATEMENT  reduce using rule 9 (instruction -> if_instruction .)
    NAME            reduce using rule 9 (instruction -> if_instruction .)
    IF              reduce using rule 9 (instruction -> if_instruction .)
    WHILE           reduce using rule 9 (instruction -> if_instruction .)
    STRING          reduce using rule 9 (instruction -> if_instruction .)
    NUMBER          reduce using rule 9 (instruction -> if_instruction .)
    DIFFERENCE      reduce using rule 9 (instruction -> if_instruction .)
    SUMMATION       reduce using rule 9 (instruction -> if_instruction .)
    LEFTPARANTHESIS reduce using rule 9 (instruction -> if_instruction .)
    TRUE            reduce using rule 9 (instruction -> if_instruction .)
    FALSE           reduce using rule 9 (instruction -> if_instruction .)
    NEGATION        reduce using rule 9 (instruction -> if_instruction .)
    LEFTSQAUREBRACKET reduce using rule 9 (instruction -> if_instruction .)
    TUPLEPOUND      reduce using rule 9 (instruction -> if_instruction .)
    PRODUCT         reduce using rule 9 (instruction -> if_instruction .)
    INTDIV          reduce using rule 9 (instruction -> if_instruction .)
    DIVIDE          reduce using rule 9 (instruction -> if_instruction .)
    POWER           reduce using rule 9 (instruction -> if_instruction .)
    MODULUS         reduce using rule 9 (instruction -> if_instruction .)
    CONCAT          reduce using rule 9 (instruction -> if_instruction .)
    IN              reduce using rule 9 (instruction -> if_instruction .)
    LESSERTHAN      reduce using rule 9 (instruction -> if_instruction .)
    GREATERTHAN     reduce using rule 9 (instruction -> if_instruction .)
    LESSEREQUAL     reduce using rule 9 (instruction -> if_instruction .)
    GREATEREQUAL    reduce using rule 9 (instruction -> if_instruction .)
    NOTEQUAL        reduce using rule 9 (instruction -> if_instruction .)
    EQUAL           reduce using rule 9 (instruction -> if_instruction .)
    ANDALSO         reduce using rule 9 (instruction -> if_instruction .)
    ORELSE          reduce using rule 9 (instruction -> if_instruction .)
    ELSE            shift and go to state 31


state 7

    (11) instruction -> while_instruction .

    $end            reduce using rule 11 (instruction -> while_instruction .)
    RIGHTCURLYBRACKET reduce using rule 11 (instruction -> while_instruction .)
    LEFTCURLYBRACKET reduce using rule 11 (instruction -> while_instruction .)
    PRINTSTATEMENT  reduce using rule 11 (instruction -> while_instruction .)
    NAME            reduce using rule 11 (instruction -> while_instruction .)
    IF              reduce using rule 11 (instruction -> while_instruction .)
    WHILE           reduce using rule 11 (instruction -> while_instruction .)
    STRING          reduce using rule 11 (instruction -> while_instruction .)
    NUMBER          reduce using rule 11 (instruction -> while_instruction .)
    DIFFERENCE      reduce using rule 11 (instruction -> while_instruction .)
    SUMMATION       reduce using rule 11 (instruction -> while_instruction .)
    LEFTPARANTHESIS reduce using rule 11 (instruction -> while_instruction .)
    TRUE            reduce using rule 11 (instruction -> while_instruction .)
    FALSE           reduce using rule 11 (instruction -> while_instruction .)
    NEGATION        reduce using rule 11 (instruction -> while_instruction .)
    LEFTSQAUREBRACKET reduce using rule 11 (instruction -> while_instruction .)
    TUPLEPOUND      reduce using rule 11 (instruction -> while_instruction .)
    PRODUCT         reduce using rule 11 (instruction -> while_instruction .)
    INTDIV          reduce using rule 11 (instruction -> while_instruction .)
    DIVIDE          reduce using rule 11 (instruction -> while_instruction .)
    POWER           reduce using rule 11 (instruction -> while_instruction .)
    MODULUS         reduce using rule 11 (instruction -> while_instruction .)
    CONCAT          reduce using rule 11 (instruction -> while_instruction .)
    IN              reduce using rule 11 (instruction -> while_instruction .)
    LESSERTHAN      reduce using rule 11 (instruction -> while_instruction .)
    GREATERTHAN     reduce using rule 11 (instruction -> while_instruction .)
    LESSEREQUAL     reduce using rule 11 (instruction -> while_instruction .)
    GREATEREQUAL    reduce using rule 11 (instruction -> while_instruction .)
    NOTEQUAL        reduce using rule 11 (instruction -> while_instruction .)
    EQUAL           reduce using rule 11 (instruction -> while_instruction .)
    ANDALSO         reduce using rule 11 (instruction -> while_instruction .)
    ORELSE          reduce using rule 11 (instruction -> while_instruction .)


state 8

    (13) instruction -> else_instruction .

    $end            reduce using rule 13 (instruction -> else_instruction .)
    RIGHTCURLYBRACKET reduce using rule 13 (instruction -> else_instruction .)
    LEFTCURLYBRACKET reduce using rule 13 (instruction -> else_instruction .)
    PRINTSTATEMENT  reduce using rule 13 (instruction -> else_instruction .)
    NAME            reduce using rule 13 (instruction -> else_instruction .)
    IF              reduce using rule 13 (instruction -> else_instruction .)
    WHILE           reduce using rule 13 (instruction -> else_instruction .)
    STRING          reduce using rule 13 (instruction -> else_instruction .)
    NUMBER          reduce using rule 13 (instruction -> else_instruction .)
    DIFFERENCE      reduce using rule 13 (instruction -> else_instruction .)
    SUMMATION       reduce using rule 13 (instruction -> else_instruction .)
    LEFTPARANTHESIS reduce using rule 13 (instruction -> else_instruction .)
    TRUE            reduce using rule 13 (instruction -> else_instruction .)
    FALSE           reduce using rule 13 (instruction -> else_instruction .)
    NEGATION        reduce using rule 13 (instruction -> else_instruction .)
    LEFTSQAUREBRACKET reduce using rule 13 (instruction -> else_instruction .)
    TUPLEPOUND      reduce using rule 13 (instruction -> else_instruction .)
    PRODUCT         reduce using rule 13 (instruction -> else_instruction .)
    INTDIV          reduce using rule 13 (instruction -> else_instruction .)
    DIVIDE          reduce using rule 13 (instruction -> else_instruction .)
    POWER           reduce using rule 13 (instruction -> else_instruction .)
    MODULUS         reduce using rule 13 (instruction -> else_instruction .)
    CONCAT          reduce using rule 13 (instruction -> else_instruction .)
    IN              reduce using rule 13 (instruction -> else_instruction .)
    LESSERTHAN      reduce using rule 13 (instruction -> else_instruction .)
    GREATERTHAN     reduce using rule 13 (instruction -> else_instruction .)
    LESSEREQUAL     reduce using rule 13 (instruction -> else_instruction .)
    GREATEREQUAL    reduce using rule 13 (instruction -> else_instruction .)
    NOTEQUAL        reduce using rule 13 (instruction -> else_instruction .)
    EQUAL           reduce using rule 13 (instruction -> else_instruction .)
    ANDALSO         reduce using rule 13 (instruction -> else_instruction .)
    ORELSE          reduce using rule 13 (instruction -> else_instruction .)


state 9

    (4) program -> LEFTCURLYBRACKET . list_instruction RIGHTCURLYBRACKET
    (7) program -> LEFTCURLYBRACKET . RIGHTCURLYBRACKET
    (3) list_instruction -> . list_instruction instruction
    (8) list_instruction -> . instruction
    (1) instruction -> . program
    (2) instruction -> . list_instruction_assignment
    (5) instruction -> . instruction_print
    (6) instruction -> . instruction_assignment
    (9) instruction -> . if_instruction
    (11) instruction -> . while_instruction
    (13) instruction -> . else_instruction
    (4) program -> . LEFTCURLYBRACKET list_instruction RIGHTCURLYBRACKET
    (7) program -> . LEFTCURLYBRACKET RIGHTCURLYBRACKET
    (16) list_instruction_assignment -> . index ASSIGNMENT definition SEMICOLON
    (17) instruction_print -> . PRINTSTATEMENT LEFTPARANTHESIS definition RIGHTPARANTHESIS SEMICOLON
    (15) instruction_assignment -> . NAME ASSIGNMENT definition SEMICOLON
    (10) if_instruction -> . IF LEFTPARANTHESIS definition RIGHTPARANTHESIS program
    (12) while_instruction -> . WHILE LEFTPARANTHESIS definition RIGHTPARANTHESIS program
    (14) else_instruction -> . if_instruction ELSE program
    (47) index -> . definition LEFTSQAUREBRACKET definition RIGHTSQAUREBRACKET
    (19) definition -> . list
    (25) definition -> . definition PRODUCT definition
    (26) definition -> . definition DIFFERENCE definition
    (27) definition -> . definition SUMMATION definition
    (28) definition -> . definition INTDIV definition
    (29) definition -> . definition DIVIDE definition
    (30) definition -> . definition POWER definition
    (31) definition -> . definition MODULUS definition
    (32) definition -> . definition CONCAT definition
    (33) definition -> . definition IN definition
    (34) definition -> . tuple
    (35) definition -> . definition LESSERTHAN definition
    (36) definition -> . definition GREATERTHAN definition
    (37) definition -> . definition LESSEREQUAL definition
    (38) definition -> . definition GREATEREQUAL definition
    (39) definition -> . STRING
    (40) definition -> . definition NOTEQUAL definition
    (41) definition -> . definition EQUAL definition
    (42) definition -> . definition ANDALSO definition
    (44) definition -> . NUMBER
    (45) definition -> . definition ORELSE definition
    (46) definition -> . DIFFERENCE definition
    (48) definition -> . SUMMATION definition
    (49) definition -> . LEFTPARANTHESIS definition RIGHTPARANTHESIS
    (50) definition -> . TRUE
    (52) definition -> . phase
    (54) definition -> . FALSE
    (55) definition -> . index
    (56) definition -> . NEGATION definition
    (57) definition -> . pound
    (58) definition -> . NAME
    (18) list -> . LEFTSQAUREBRACKET inner_list RIGHTSQAUREBRACKET
    (20) tuple -> . LEFTPARANTHESIS inner_tuple RIGHTPARANTHESIS
    (51) phase -> . part
    (43) pound -> . TUPLEPOUND definition definition
    (53) part -> .

  ! shift/reduce conflict for LEFTSQAUREBRACKET resolved as shift
  ! shift/reduce conflict for DIFFERENCE resolved as shift
  ! shift/reduce conflict for SUMMATION resolved as shift
    RIGHTCURLYBRACKET shift and go to state 33
    LEFTCURLYBRACKET shift and go to state 9
    PRINTSTATEMENT  shift and go to state 12
    NAME            shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    STRING          shift and go to state 22
    NUMBER          shift and go to state 23
    DIFFERENCE      shift and go to state 19
    SUMMATION       shift and go to state 20
    LEFTPARANTHESIS shift and go to state 13
    TRUE            shift and go to state 24
    FALSE           shift and go to state 26
    NEGATION        shift and go to state 27
    LEFTSQAUREBRACKET shift and go to state 17
    TUPLEPOUND      shift and go to state 30
    PRODUCT         reduce using rule 53 (part -> .)
    INTDIV          reduce using rule 53 (part -> .)
    DIVIDE          reduce using rule 53 (part -> .)
    POWER           reduce using rule 53 (part -> .)
    MODULUS         reduce using rule 53 (part -> .)
    CONCAT          reduce using rule 53 (part -> .)
    IN              reduce using rule 53 (part -> .)
    LESSERTHAN      reduce using rule 53 (part -> .)
    GREATERTHAN     reduce using rule 53 (part -> .)
    LESSEREQUAL     reduce using rule 53 (part -> .)
    GREATEREQUAL    reduce using rule 53 (part -> .)
    NOTEQUAL        reduce using rule 53 (part -> .)
    EQUAL           reduce using rule 53 (part -> .)
    ANDALSO         reduce using rule 53 (part -> .)
    ORELSE          reduce using rule 53 (part -> .)

  ! LEFTSQAUREBRACKET [ reduce using rule 53 (part -> .) ]
  ! DIFFERENCE      [ reduce using rule 53 (part -> .) ]
  ! SUMMATION       [ reduce using rule 53 (part -> .) ]

    list_instruction               shift and go to state 32
    instruction                    shift and go to state 34
    program                        shift and go to state 2
    list_instruction_assignment    shift and go to state 3
    instruction_print              shift and go to state 4
    instruction_assignment         shift and go to state 5
    if_instruction                 shift and go to state 6
    while_instruction              shift and go to state 7
    else_instruction               shift and go to state 8
    index                          shift and go to state 10
    definition                     shift and go to state 11
    list                           shift and go to state 18
    tuple                          shift and go to state 21
    phase                          shift and go to state 25
    pound                          shift and go to state 28
    part                           shift and go to state 29

state 10

    (16) list_instruction_assignment -> index . ASSIGNMENT definition SEMICOLON
    (55) definition -> index .

    ASSIGNMENT      shift and go to state 35
    LEFTSQAUREBRACKET reduce using rule 55 (definition -> index .)
    PRODUCT         reduce using rule 55 (definition -> index .)
    DIFFERENCE      reduce using rule 55 (definition -> index .)
    SUMMATION       reduce using rule 55 (definition -> index .)
    INTDIV          reduce using rule 55 (definition -> index .)
    DIVIDE          reduce using rule 55 (definition -> index .)
    POWER           reduce using rule 55 (definition -> index .)
    MODULUS         reduce using rule 55 (definition -> index .)
    CONCAT          reduce using rule 55 (definition -> index .)
    IN              reduce using rule 55 (definition -> index .)
    LESSERTHAN      reduce using rule 55 (definition -> index .)
    GREATERTHAN     reduce using rule 55 (definition -> index .)
    LESSEREQUAL     reduce using rule 55 (definition -> index .)
    GREATEREQUAL    reduce using rule 55 (definition -> index .)
    NOTEQUAL        reduce using rule 55 (definition -> index .)
    EQUAL           reduce using rule 55 (definition -> index .)
    ANDALSO         reduce using rule 55 (definition -> index .)
    ORELSE          reduce using rule 55 (definition -> index .)


state 11
